# dbt-training-jaffle-shop-duckdb

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .python-version  .sqlfluff  .sqlfluffignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml
dbt/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  selectors.yml
dbt/analysis/: average_order_amount.sql  profit.sql
dbt/common/: dbt_project.yml
dbt/common/macros/db_ds_tbl_id_generator/: generate_database_name.sql  get_custom_alias.sql
dbt/data_product_1/: dbt_project.yml  packages.yml  selectors.yml
dbt/data_product_1/analysis/: expenses.sql  revenue.sql
dbt/data_product_1/docs/: overview.md  sources.md
dbt/data_product_1/macros/: query_comment.sql
dbt/data_product_1/models/jaffle_shop/: sources.yml
dbt/data_product_1/seeds/jaffle_shop/: schema.yml
dbt/data_product_1/tests/: unittest_jaffle.sql
dbt/data_product_2/: dbt_project.yml  packages.yml
dbt/data_product_2/macros/: db_ds_tbl_id_generator.sql
dbt/dbt_packages/: dbt_artifacts
dbt/docs/: dbt_project.yml  overview.md  packages.yml
dbt/local_packages/materialized_views/: README.md  dbt_project.yml
dbt/macros/: query_comment.sql
dbt/macros/db_ds_tbl_id_generator/: generate_database_name.sql  generate_schema_name.sql  get_custom_alias.sql
dbt/macros/unittests_mock/: ut_stg_customers.sql  ut_stg_orders.sql  ut_stg_payments.sql
dbt/models/jaffle_shop/: exposures.yml  sources.yml
dbt/models/jaffle_shop/datamart/: average_order_amount.yml  example_develop_metric.sql  expenses.yml  orders.sql  orders.yml  profit.yml  schema.yml
dbt/models/jaffle_shop/staging/: schema.yml  stg_eth.sql  stg_orders.sql
dbt/tests/: singular_test.sql
macros/db_ds_tbl_id_generator/: generate_database_name.sql  generate_schema_name.sql
terraform/: .terraform.lock.hcl  README.md  main.tf  terraform.auto.tfvars  variables.tf  versions.tf
terraform/.terraform/: terraform.tfstate
terraform/envs/ops/: README.md  main.tf  variables.tf
(+6 files in other folders)
