[tool.poetry]
name = "astrafy-dbt-demo"
version = "0.1.0"
description = "Jaffle Shop - data mesh"
authors = ["Charles Verleyen"]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11"
dbt-core = "1.5.0"
dbt-bigquery= "1.5.0"
google-cloud-storage="2.9.0"
google-cloud-core = "2.3.2"
sqlfluff-templater-dbt="2.1.0"
diff-cover="7.0.1"
pytz="2022.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core==1.2.2"]
build-backend = "poetry.core.masonry.api"
