[tool.poetry]
name = "astrafy-dbt-demo"
version = "0.1.0"
description = "Jaffle Shop"
authors = ["Charles Verleyen", "Lukasz Sciga"]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
dbt-core = "1.7.2"
google-cloud-storage = "2.13.0"
google-cloud-core = "2.3.3"
sqlfluff-templater-dbt = "2.3.5"
diff-cover = "7.0.1"
pytz = "2022.7.1"
elementary-data = "0.12.1"

[tool.poetry.group.bigquery]
optional = true

[tool.poetry.group.bigquery.dependencies]
dbt-bigquery = "1.7.2"

[tool.poetry.group.duckdb]
optional = true

[tool.poetry.group.duckdb.dependencies]
duckdb = "^0.9.2"
dbt-duckdb = "^1.7.0"
duckcli = "^0.2.1"


[build-system]
requires = ["poetry-core==1.2.2"]
build-backend = "poetry.core.masonry.api"
